[tool.poetry]
name = "undo-chat"
version = "0.1.1"
description = ""
authors = ["Kazuki INABA"]
license = "MIT"
packages = [
    { include = "undo_chat" }
]
readme="README.md"
repository="https://github.com/tei6/undo_chat"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
backoff = "*"
pyquery = "^2"
requests-toolbelt = "^1"
more_itertools = "*"
pyyaml = "*"
openai = "^1.10"
prompt_toolkit = "^3.0.43"
argparse = "^1.4.0"
rich = "^13.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8"
# pytest-xdist = "*"
# pytest-cov = "*"


[tool.poetry.group.linter.dependencies]
ruff = "^0.5"
mypy = "^1"
pylint = "^3"
# types-requests = "*"

[tool.poetry.group.documentation.dependencies]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipykernel = "^6.29.3"


[tool.poetry.scripts]
undo-chat = "undo_chat.main:main"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 150

[tool.ruff.lint]
ignore = []

select = [
    "ALL"
]

[tool.ruff.lint.pylint]
max-args = 10

